--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="2-moving-box.css">
+    <link rel="stylesheet" href="st.css">
 </head>
 
 <body>
